# lauyer

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  config.example.toml
.github/workflows/: release.yml
docs/: real-world-test.md
src/: cli.rs  compact.rs  config.rs  error.rs  format.rs  http.rs  lib.rs  main.rs
src/dgsi/: courts.rs  decision.rs  markdown.rs  mod.rs  search.rs
src/dr/: content_types.rs  detail.rs  markdown.rs  mod.rs  request_template.json  search.rs  session.rs
src/server/: mod.rs
tests/: cli_test.rs  compact_test.rs  config_test.rs  dgsi_mod_test.rs  dgsi_test.rs  dr_test.rs  format_test.rs  http_test.rs  server_test.rs
tests/fixtures/: dgsi_decision.html  dgsi_decision_latin1.html  dgsi_search_results.html  dr_search_response.json
