[package]
name = "lauyer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast CLI for searching Portuguese legal jurisprudence (DGSI) and legislation (Diário da República)"
license-file = "LICENSE"
repository = "https://github.com/nikuscs/lauyer"
readme = "README.md"
keywords = ["legal", "portugal", "cli", "dgsi", "rust"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.13", features = ["gzip", "brotli", "socks", "json", "cookies"] }

# HTML parsing
scraper = "0.26"

# HTML → Markdown
htmd = "0.5"

# Encoding
encoding_rs = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# URL percent-encoding (for DGSI search queries)
percent-encoding = "2"

# Base64 (for DR search params)
base64 = "0.22"

# HTTP server
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date handling
chrono = { version = "0.4", features = ["serde"] }

# Progress bars
indicatif = "0.18"

# UUID generation (for DR session)
uuid = { version = "1", features = ["v4"] }

# Async trait support
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic allows for CLI work:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
future_not_send = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
format_push_string = "allow"
return_self_not_must_use = "allow"
unnecessary_debug_formatting = "allow"
# Strict denials:
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
